# drg

./: .gitignore  .packit.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  docs.md  rust-drg.spec
.github/scripts/: package_release.sh
.github/scripts/tests/: clean_apps.sh
.github/workflows/: build.yaml  format.yaml  release.yml  snap.yaml  test.yaml  trust.yaml
distribution/flatpak/: .gitignore  README.md  generated-sources.json  io.drogue.drg.yaml
distribution/rpm/: README.md
distribution/snap/: README.md  snapcraft.yaml
distribution/windows/: drg.wxi
keys/: test-app-key.pem  test-incorrect-key.pem  test-rsa-gen.pk8
src/: admin.rs  apply.rs  apps.rs  arguments.rs  certs_utils.rs  command.rs  config.rs  devices.rs  keys.rs  lib.rs  main.rs  openid.rs  outcome.rs  stream.rs  tokens.rs  trust.rs  util.rs
src/admin/: admin.rs  members.rs  mod.rs  tokens.rs  transfer.rs
src/applications/: mod.rs  operations.rs
src/arguments/: cli.rs  config.rs  create.rs  delete.rs  edit.rs  get.rs  login.rs  mod.rs
src/devices/: mod.rs  operations.rs  outcome.rs
src/util/: certs.rs  display.rs  endpoints.rs  error.rs  mod.rs  operations.rs  outcome.rs
test-utils/: Cargo.toml
test-utils/src/: lib.rs  macros.rs  outcome.rs  util.rs
tests/: access_keys.rs  admin.rs  app.rs  apply.rs  command.rs  config.rs  devices.rs  env.rs  login.rs  trust.rs
