[package]
name = "drg"
version = "0.8.1-alpha1"
authors = ["Jean-Baptiste Trystram <jbtrystram@redhat.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
description = "A command line tool to interact with a drogue-cloud instance."
repository = "https://github.com/drogue-iot/drg/"
homepage = "https://drogue.io/"


categories = ["command-line-utilities"]

[dependencies]
drogue-client = "0.10"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }

anyhow = "1.0"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
clap = { version = "3.0", features = ["cargo", "env"] }

oauth2 = "4.1.0"

simple_logger = { version = "1.11.0", default-features = false, features = [ "colored" ] } 
log = "0.4.13"

strum = "0.21"
strum_macros = "0.21"

serde_json = "1.0"
serde_yaml = "0.8"
serde = { version = "1.0", features = ["derive"] }
colored_json = "2"
tempfile = "3.2.0"

tiny_http = "0.6.2"
qstring = "0.7.2"

url = { version = "2.2.1",  features = ["serde"] }
urlencoding = "1.3"
chrono = { version = "0.4", features = ["serde"]}

webbrowser = "0.5.5"

edit = "0.1.3"
dirs = "3.0"

tabular = "0.1.4"

base64 = "0.13.0"
rcgen = { version  = "0.8.11", features = ["pem", "x509-parser"] }
x509-parser = "0.9.2"
json_value_merge = "0.1.2"

rsa = "0.5.0"
rand = "0.8.4"
sha-crypt = "0.3.2"

tungstenite = { version = "0.12.0", features = ["native-tls"]}

[dev-dependencies]
assert_cmd = "2.0.4"
rstest = "0.12.0"
test-utils = { path = "test-utils" }
uuid = {version= "1.0", features = ["v4"]}

[patch.crates-io]
drogue-client = { git = "https://github.com/drogue-iot/drogue-client", rev = "94ece8681b6bca9c792d651690a03b219eb97e2d" } # FIXME: awaiting release
#drogue-client = { path = "../drogue-client" }