[package]
name = "test-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
assert_cmd = "2.0.4"
dotenv = "0.15.0"
drogue-client = "0.10.0"
serde = "1.0"
serde_json = "1.0"
url = "2.2"
uuid = {version= "1.0", features = ["v4"]}
drg = { path = "../" }

[lib]
name = "drg_test_utils"
path = "src/lib.rs"

[patch.crates-io]
drogue-client = { git = "https://github.com/drogue-iot/drogue-client", branch = "main" } # FIXME: awaiting release
#drogue-client = { path = "../../drogue-client" }
